Scrollbar prob fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,3 +185,23 @@ input[type="submit"] {
         --rootFontSize: 12.5px;
     }
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0.5);
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #6930ed;
+    border-radius: 4px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(105, 48, 237, .8);
+  }
